# fimo

./: .gitignore  LICENSE.md  config.yml.template  fimo.py  fimoimport.py  pyproject.toml
fimo/: cli.py  exception.py  importer.py  monitor.py
